--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css"/>
-    <link rel="icon" type="image/png" href="./img/favicon.png" />
-    <link rel="apple-touch-icon" href="./img/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="./previews/img/favicon.png" />
+    <link rel="apple-touch-icon" href="./previews/img/apple-touch-icon.png" />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="./img/apple-touch-icon-72x72.png"
+      href="./previews/img/apple-touch-icon-72x72.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="./img/apple-touch-icon-114x114.png"
+      href="./previews/img/apple-touch-icon-114x114.png"
     />
   </head>
   <body>
     <header class="main-header">
       <div class="main-logo">
         <a
-          href="https://cns-iu.github.io/previews/"
+          href="https://cns-iu.github.io/hra-vccf-cell-distance-visualizations/"
           title="Link to VCCF Preview Homepage"
-          ><img src="./img/logo-hubmap.svg" alt="HuBMAP logo" class="logo"
+          ><img src="./previews/img/logo-hubmap.svg" alt="HuBMAP logo" class="logo"
         /></a>
       </div>
     </header>
@@ -33,7 +33,7 @@
       <h1>VCCF Cell Distance Visualizations</h1>
       <ul class="list-style-none">
         <li>
-          <a href="./pilots/pilot1.html" title="Intestine Data Preview"
+          <a href="./previews/pilots/pilot1.html" title="Intestine Data Preview"
             >Vasculature CCF Visualization for Intestine</a
           >
         </li>
