--- a/previews/pilots/pilot1.html
+++ b/previews/pilots/pilot1.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/gh/vanillawc/wc-markdown@1/index.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="../style.css"></link>
+    <link rel="stylesheet" href="../../style.css"></link>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="icon" type="image/png" href="../img/favicon.png">
     <link rel="apple-touch-icon" href="../img/apple-touch-icon.png">
@@ -18,7 +18,7 @@
   <body>
     
     <header class="main-header"><div class="main-logo"><a href="https://hubmapconsortium.github.io/ccf/" title="Link to HuBMAP CCF Portal"><img src="../img/logo-hubmap.svg" alt="HuBMAP logo" class="logo"></a></div></header>
-    <wc-markdown src="../markdown/pilot2.md" class="main"></wc-markdown>
+    <wc-markdown src="../markdown/pilot1.md" class="main"></wc-markdown>
     <footer class="main-footer"><p><small>©
                     <script>new Date().getFullYear() > 2010 && document.write(new Date().getFullYear());</script> All Rights
                     Reserved.</small></p></footer>
