Add link to Skin Visualization

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
       <h1>VCCF Cell Distance Visualizations</h1>
       <ul class="list-style-none">
         <li>
-          <a href="./previews/pilots/pilot1.html" title="Intestine Data Preview"
+          <a href="https://hubmapconsortium.github.io/hra-previews/pilots/pilot2.html" title="Vasculature CCF Visualization for Skin"
+            >Vasculature CCF Visualization for Skin</a
+          >
+        </li>
+        <li>
+          <a href="./previews/pilots/pilot1.html" title="Vasculature CCF Visualization for Intestine"
             >Vasculature CCF Visualization for Intestine</a
           >
         </li>
