--- a/previews/pilots/pilot1.html
+++ b/previews/pilots/pilot1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Vasculature CCF Visualization</title>
+    <title>Vasculature CCF Visualization for Intestine Data</title>
     <script src="https://cdn.jsdelivr.net/gh/vanillawc/wc-markdown@1/index.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"> 
