--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             >Vasculature CCF Visualization for Intestine</a
           >
         </li>
+                <li>
+          <a href="./previews/pilots/pilot2.html" title="Vasculature CCF Visualization for Maternal-Fetal Interface"
+            >Vasculature CCF Visualization for Maternal-Fetal Interface</a
+          >
+        </li>
       </ul>
     </div>
     <footer class="main-footer">
