--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       sizes="114x114"
       href="./previews/img/apple-touch-icon-114x114.png"
     />
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"> </script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"> </script>
 
 <script>
 
